--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_mediapipe: ^0.0.7
   tensorflow_lite_flutter: ^2.0.1
+  google_nav_bar: ^5.0.6
+  iconify_flutter: ^0.0.5
 
 dev_dependencies:
   flutter_test:
