--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   google_nav_bar: ^5.0.6
   iconify_flutter: ^0.0.5
   translator: ^1.0.0
+  lottie: ^3.1.0
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
