--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   translator: ^1.0.0
   lottie: ^3.1.0
   animated_splash_screen: ^1.3.0
+  camera: ^0.10.6
+  api_cache_manager: ^1.0.2
+  tflite_flutter: ^0.10.4
 
 dev_dependencies:
   flutter_test:
