--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   camera: ^0.10.6
   api_cache_manager: ^1.0.2
   tflite_flutter: ^0.10.4
+  http: ^1.2.1
+  flutter_secure_storage: ^9.1.1
 
 dev_dependencies:
   flutter_test:
