--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   http: ^1.2.1
   flutter_secure_storage: ^9.1.1
   protobuf: ^2.1.0
+  chaquopy: ^0.0.20
+  webview_flutter: ^4.7.0
+  path_provider: ^2.1.3
+  webview_flutter_android: ^3.16.1
 
 dev_dependencies:
   flutter_test:
