--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.1.1
   protobuf: ^2.1.0
   path_provider: ^2.1.3
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
