--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   protobuf: ^2.1.0
   path_provider: ^2.1.3
   carousel_slider: ^4.2.1
+  image: ^4.1.7
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   flutter_test:
